--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@cucumber/cucumber": "^10.6.0"
+    "@cucumber/cucumber": "^10.6.0",
+    "hamjest": "^4.1.0"
   }
 }
